<resources>
    <string name="about">About</string>
    <string name="app_name">Calculator</string>
    <string name="btn_c">C</string>
    <string name="btn_del">DEL</string>
    <string name="btn_div">/</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_dot">.</string>
    <string name="btn_0">0</string>
    <string name="btn_mul">*</string>
    <string name="btn_sub">-</string>
    <string name="btn_add">+</string>
    <string name="btn_equ">=</string>
    <string name="errer_info">Error!</string>
    <string name="unknown">Unknown</string>
    <string name="verion_info">Version: %s \n Designer: </string>
</resources>
