<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/btn_7"
            style="@style/DigitalBtnStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_7" />

        <Button
            android:id="@+id/btn_8"
            style="@style/DigitalBtnStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_8" />

        <Button
            android:id="@+id/btn_9"
            style="@style/DigitalBtnStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_9" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/btn_4"
            style="@style/DigitalBtnStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_4" />

        <Button
            android:id="@+id/btn_5"
            style="@style/DigitalBtnStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_5" />

        <Button
            android:id="@+id/btn_6"
            style="@style/DigitalBtnStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_6" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/btn_1"
            style="@style/DigitalBtnStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/btn_2"
            style="@style/DigitalBtnStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/DigitalBtnStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btn_3" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/btn_0"
            style="@style/DigitalBtnStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onClick"
            android:text="@string/btn_0" />

        <Button
            android:id="@+id/btn_dot"
            style="@style/DigitalBtnStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/digital_btn_selector"
            android:onClick="onClick"
            android:text="@string/btn_dot" />

    </TableRow>

</merge>