<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_mul"
        style="@style/SymbolDarkBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/btn_mul" />

    <Button
        android:id="@+id/btn_sub"
        style="@style/SymbolDarkBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/btn_sub" />

    <Button
        android:id="@+id/btn_add"
        style="@style/SymbolDarkBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/btn_add" />

    <Button
        android:id="@+id/btn_equ"
        style="@style/SymbolDarkBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:onClick="onClick"
        android:text="@string/btn_equ" />

</merge>