<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_c"
        style="@style/SymbolLightBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/btn_c" />

    <Button
        android:id="@+id/btn_del"
        style="@style/SymbolLightBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/btn_del" />

    <Button
        android:id="@+id/btn_div"
        style="@style/SymbolLightBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/btn_div" />

</merge>